<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="end"
    android:orientation="vertical"
    android:paddingTop="6dp"
    android:paddingBottom="6dp">

    <TextView
        android:id="@+id/tvContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_bubble_user"
        android:textColor="#FFFFFF" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btnDelete"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/action_delete"
            app:srcCompat="@android:drawable/ic_menu_delete"
            app:tint="?attr/colorControlNormal" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btnEditResend"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/action_edit_resend"
            app:srcCompat="@drawable/ic_edit_24"
            app:tint="?attr/colorControlNormal" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btnCopy"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/action_copy"
            app:srcCompat="@drawable/ic_copy_24"
            app:tint="?attr/colorControlNormal" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btnRetry"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/action_retry"
            app:srcCompat="@drawable/ic_retry_24"
            app:tint="?attr/colorControlNormal" />
    </LinearLayout>

</LinearLayout>
